--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = sphinx-automodapi
+name = sphinx-automodapi-regx
 description = Sphinx extension for auto-generating API documentation for entire modules
 long_description = file:README.rst
 long_description_content_type = text/x-rst
-author = The Astropy Developers
-author_email = astropy.team@gmail.com
+author = Thomas Glezen
+author_email = tcglezen@gmail.com
 license = BSD 3-Clause License
-url = https://github.com/astropy/sphinx-automodapi
+url = https://github.com/tcglezen/automodapi-skip
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Developers
